[gd_scene load_steps=7 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BaseGame/Game2/Game2.gd" type="Script" id=2]
[ext_resource path="res://Music/531510__eponn__correct-blips.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Game2" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_top = 2.0
margin_right = 1280.0
margin_bottom = 722.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG"]
margin_right = 1279.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Wait for it..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 1279.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "CLICK!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.407843, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
margin_right = 1285.0
margin_bottom = 726.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.87451, 0.207843, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ColorRect2/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Your Average Time:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer"]
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Restart" type="Button" parent="ColorRect2/VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 358.0
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/HBoxContainer/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ColorRect2/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
flat = true

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/HBoxContainer/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "FX"
[connection signal="button_down" from="ColorRect/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="ColorRect/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
